--- a/risk_of_multiprinting/risk_of_multiprinting.csproj
+++ b/risk_of_multiprinting/risk_of_multiprinting.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net35</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
     <AssemblyName>risk_of_multiprinting</AssemblyName>
     <Product>Risk of Multiprinting</Product>
     <Version>1.0.0</Version>
@@ -19,6 +19,7 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.9-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
   </ItemGroup>
   
