--- a/risk_of_multiprinting/manifest.json
+++ b/risk_of_multiprinting/manifest.json
@@ -3,7 +3,8 @@
     "description": "Risk of Rain 2 mod that allows printing of multiple items",
     "version_number": "0.1.0",
     "dependencies": [
-        "bbepis-BepInExPack-5.4.2119"
+        "bbepis-BepInExPack-5.4.2119",
+        "RiskofThunder-R2API_Networking-1.0.3"
     ],
     "website_url": "https://github.com/Mavodeli/risk_of_multiprinting"
 }
