--- a/risk_of_multiprinting/risk_of_multiprinting.csproj
+++ b/risk_of_multiprinting/risk_of_multiprinting.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="BepInEx.Analyzers" Version="1.*" PrivateAssets="all" />
     <PackageReference Include="BepInEx.Core" Version="5.*" />
     <PackageReference Include="BepInEx.PluginInfoProps" Version="2.*" />
+    <PackageReference Include="R2API.Networking" Version="1.0.3" />
     <PackageReference Include="RiskOfRain2.GameLibs" Version="1.3.9-r.0" />
     <PackageReference Include="UnityEngine.Modules" Version="2021.3.33" IncludeAssets="compile" />
   </ItemGroup>
