--- a/risk_of_multiprinting/risk_of_multiprinting.csproj
+++ b/risk_of_multiprinting/risk_of_multiprinting.csproj
@@ -2,9 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <AssemblyName>risk_of_multiprinting</AssemblyName>
+    <AssemblyName>de.mavodeli.risk_of_multiprinting</AssemblyName>
     <Product>Risk of Multiprinting</Product>
-    <Version>1.0.0</Version>
+    <Version>1.1.0</Version>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <LangVersion>latest</LangVersion>
     <RestoreAdditionalProjectSources>
